@@ -688,6 +688,20 @@ class Selection(Char):
                 except Exception, exception:
                     common.process_exception(exception, self.window)
                     selection = []
+
+            if isinstance(self.attrs.get('domain'), list):
+                for dom in common.filter_domain(self.attrs.get('domain', [])):
+                    if dom[1] in ('=', '!='):
+                        todel = []
+                        for i in range(len(selection)):
+                            if (dom[1] == '=' \
+                                    and selection[i][0] != dom[2]) \
+                                    or (dom[1] == '!=' \
+                                    and selection[i][0] == dom[2]):
+                                todel.append(i)
+                        for i in todel[::-1]:
+                            del selection[i]
+
         if self.attrs.get('sort', True):
             selection.sort(lambda x, y: cmp(x[1], y[1]))
         self.attrs['selection'] = selection
